; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-path-util.c_test_last_path_component.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-path-util.c_test_last_path_component.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"a/b/c\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"c\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"a/b/c/\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"c/\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.5 = private unnamed_addr constant [3 x i8] c"//\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"///\00", align 1
@.str.7 = private unnamed_addr constant [2 x i8] c".\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"./.\00", align 1
@.str.9 = private unnamed_addr constant [5 x i8] c"././\00", align 1
@.str.10 = private unnamed_addr constant [3 x i8] c"./\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"././/\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c".//\00", align 1
@.str.13 = private unnamed_addr constant [7 x i8] c"/foo/a\00", align 1
@.str.14 = private unnamed_addr constant [2 x i8] c"a\00", align 1
@.str.15 = private unnamed_addr constant [8 x i8] c"/foo/a/\00", align 1
@.str.16 = private unnamed_addr constant [3 x i8] c"a/\00", align 1
@.str.17 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.18 = private unnamed_addr constant [3 x i8] c"/a\00", align 1
@.str.19 = private unnamed_addr constant [4 x i8] c"/a/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_last_path_component to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_last_path_component() #0 {
  %1 = call i32* @last_path_component(i8* null)
  %2 = icmp eq i32* %1, null
  %3 = zext i1 %2 to i32
  %4 = call i32 @assert_se(i32 %3)
  %5 = call i32* @last_path_component(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @streq(i32* %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %7 = call i32 @assert_se(i32 %6)
  %8 = call i32* @last_path_component(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 @streq(i32* %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  %10 = call i32 @assert_se(i32 %9)
  %11 = call i32* @last_path_component(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  %12 = call i32 @streq(i32* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  %13 = call i32 @assert_se(i32 %12)
  %14 = call i32* @last_path_component(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.5, i64 0, i64 0))
  %15 = call i32 @streq(i32* %14, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  %16 = call i32 @assert_se(i32 %15)
  %17 = call i32* @last_path_component(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0))
  %18 = call i32 @streq(i32* %17, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  %19 = call i32 @assert_se(i32 %18)
  %20 = call i32* @last_path_component(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i64 0, i64 0))
  %21 = call i32 @streq(i32* %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i64 0, i64 0))
  %22 = call i32 @assert_se(i32 %21)
  %23 = call i32* @last_path_component(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i64 0, i64 0))
  %24 = call i32 @streq(i32* %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i64 0, i64 0))
  %25 = call i32 @assert_se(i32 %24)
  %26 = call i32* @last_path_component(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i64 0, i64 0))
  %27 = call i32 @streq(i32* %26, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.10, i64 0, i64 0))
  %28 = call i32 @assert_se(i32 %27)
  %29 = call i32* @last_path_component(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0))
  %30 = call i32 @streq(i32* %29, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i64 0, i64 0))
  %31 = call i32 @assert_se(i32 %30)
  %32 = call i32* @last_path_component(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.13, i64 0, i64 0))
  %33 = call i32 @streq(i32* %32, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.14, i64 0, i64 0))
  %34 = call i32 @assert_se(i32 %33)
  %35 = call i32* @last_path_component(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.15, i64 0, i64 0))
  %36 = call i32 @streq(i32* %35, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i64 0, i64 0))
  %37 = call i32 @assert_se(i32 %36)
  %38 = call i32* @last_path_component(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.17, i64 0, i64 0))
  %39 = call i32 @streq(i32* %38, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.17, i64 0, i64 0))
  %40 = call i32 @assert_se(i32 %39)
  %41 = call i32* @last_path_component(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.14, i64 0, i64 0))
  %42 = call i32 @streq(i32* %41, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.14, i64 0, i64 0))
  %43 = call i32 @assert_se(i32 %42)
  %44 = call i32* @last_path_component(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i64 0, i64 0))
  %45 = call i32 @streq(i32* %44, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i64 0, i64 0))
  %46 = call i32 @assert_se(i32 %45)
  %47 = call i32* @last_path_component(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.18, i64 0, i64 0))
  %48 = call i32 @streq(i32* %47, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.14, i64 0, i64 0))
  %49 = call i32 @assert_se(i32 %48)
  %50 = call i32* @last_path_component(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.19, i64 0, i64 0))
  %51 = call i32 @streq(i32* %50, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i64 0, i64 0))
  %52 = call i32 @assert_se(i32 %51)
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32* @last_path_component(i8*) #1

declare dso_local i32 @streq(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
